--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "gulp-minify-html": "^1.0.3",
     "gulp-mocha": "^2.1.2",
     "gulp-plumber": "^1.0.1",
+    "gulp-react": "^3.0.1",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.0.3",
+    "gulp-sass": "^1.3.3",
     "gulp-size": "^1.2.3",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
