--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "chai": "^3.0.0",
     "del": "^1.2.0",
     "express": "^4.13.0",
+    "fs": "0.0.2",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.1.0",
+    "gulp-compile-handlebars": "^0.5.0",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
     "gulp-filesize": "0.0.6",
@@ -37,6 +39,7 @@
     "gulp-plumber": "^1.0.1",
     "gulp-react": "^3.0.1",
     "gulp-rename": "^1.2.2",
+    "gulp-rev": "^5.1.0",
     "gulp-sass": "^1.3.3",
     "gulp-size": "^1.2.3",
     "gulp-sourcemaps": "^1.5.2",
