gulp versioning working on js, css files

--- a/client/rev-manifest/rev-manifest.json
+++ b/client/rev-manifest/rev-manifest.json
@@ -1,4 +1,4 @@
 {
-  "all.min-887fbb3750.js": "all.min-887fbb3750-887fbb3750.js",
-  "allscss-1c348a9f9a.css": "allscss-1c348a9f9a-1c348a9f9a.css"
+  "all.min.js": "all.min-887fbb3750.js",
+  "allscss.css": "allscss-1c348a9f9a.css"
 }
