jscs ES6 validation with esnext:true

--- a/.jscsrc
+++ b/.jscsrc
@@ -28,5 +28,6 @@
     "disallowTrailingWhitespace": true,
     "disallowMultipleSpaces": true,
     "disallowSpaceBeforePostfixUnaryOperators": ["++", "--"],
-    "disallowTrailingComma": true
+    "disallowTrailingComma": true,
+    "esnext": true
 }
