--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/valyonbalazs/rss_reader#readme",
   "dependencies": {
+    "assert": "^1.3.0",
     "bluebird": "^2.9.30",
     "body-parser": "^1.13.1",
     "chai": "^3.0.0",
