--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/valyonbalazs/rss_reader#readme",
   "dependencies": {
     "assert": "^1.3.0",
+    "babel-core": "^5.8.23",
     "bluebird": "^2.9.30",
     "body-parser": "^1.13.1",
     "chai": "^3.0.0",
@@ -58,6 +59,7 @@
     "mocha": "^2.2.5",
     "phantomjs": "^1.9.17",
     "run-sequence": "^1.1.1",
+    "should": "^7.1.0",
     "superagent": "^1.2.0"
   },
   "keywords": [
