testing: single mocha changed to Karma, client side (browser) tests are tested in Karma with mocha and chai tests

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "node": ">= 0.10",
     "npm": ">=2.1"
   },
+  "scripts": {
+    "test": "karma start test/browser/my.conf.js"
+  },
   "bugs": {
     "url": "https://github.com/valyonbalazs/rss_reader/issues"
   },
@@ -49,10 +52,13 @@
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.3.4",
     "gulp-watch-sequence": "0.0.4",
+    "jasmine-core": "^2.3.4",
     "jshint-stylish": "^2.0.1",
     "karma": "^0.12.37",
     "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.2.0",
     "karma-html-reporter": "^0.2.6",
+    "karma-jasmine": "^0.3.6",
     "karma-mocha": "^0.2.0",
     "karma-mocha-reporter": "^1.0.2",
     "karma-phantomjs-launcher": "^0.2.0",
@@ -69,5 +75,8 @@
     "web",
     "application",
     "application"
-  ]
+  ],
+  "devDependencies": {
+    "karma-firefox-launcher": "^0.1.6"
+  }
 }
