--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "karma": "^0.12.37",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.2.0",
+    "karma-coverage": "^0.5.2",
     "karma-html-reporter": "^0.2.6",
     "karma-jasmine": "^0.3.6",
     "karma-mocha": "^0.2.0",
