--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "karma-chrome-launcher": "^0.2.0",
     "karma-coverage": "^0.5.2",
     "karma-html-reporter": "^0.2.6",
+    "karma-html2js-preprocessor": "^0.1.0",
     "karma-jasmine": "^0.3.6",
     "karma-mocha": "^0.2.0",
     "karma-mocha-reporter": "^1.0.2",
