--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "npm": ">=2.1"
   },
   "scripts": {
-    "test": "karma start test/browser/my.conf.js"
+    "test": "./node_modules/.bin/mocha --compilers js:babel/register --recursive"
   },
   "bugs": {
     "url": "https://github.com/valyonbalazs/rss_reader/issues"
@@ -45,7 +45,7 @@
     "gulp-react": "^3.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-rev": "^5.1.0",
-    "gulp-sass": "^1.3.3",
+    "gulp-sass": "^2.0.4",
     "gulp-size": "^1.2.3",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
@@ -54,6 +54,7 @@
     "gulp-watch-sequence": "0.0.4",
     "jasmine-core": "^2.3.4",
     "jest-cli": "^0.5.2",
+    "jsdom": "^6.3.0",
     "jshint-stylish": "^2.0.1",
     "karma": "^0.12.37",
     "karma-chai": "^0.1.0",
@@ -67,11 +68,14 @@
     "karma-phantomjs-launcher": "^0.2.0",
     "karma-react-preprocessor": "0.0.4",
     "mocha": "^2.2.5",
+    "node-sass": "^3.3.2",
     "phantomjs": "^1.9.17",
+    "react": "^0.13.3",
     "react-tools": "^0.13.3",
     "run-sequence": "^1.1.1",
     "should": "^7.1.0",
-    "superagent": "^1.2.0"
+    "superagent": "^1.2.0",
+    "underscore": "^1.8.3"
   },
   "keywords": [
     "rss-reader",
